--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
-        <title>Template Site</title>
+        <title>Code Club Quest</title>
     </head>
 
     <body>
         <header>
             <div>
-                <h1 class="heading">Site Title</h1>
+                <h1 class="heading">Code Club Quest</h1>
             </div>
         </header>
 
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li><a href="how.html">How it works</a></li>
+                <li><a href="quest.html">Quest</a></li>
             </ul>
         </nav>
 
         <main>
             <div>
-                <h2 class="heading">Page Content</h2>
+                <h2 class="heading">Welcome</h2>
+                <p>
+                    Are you ready to put your coding skills to the test in this epic battle of wits? Do you have what it takes to take down the evil Nano Corps? Find out here by putting your know-how to the ultimate test and learning new things along the way!
+                </p>
             </div>
         </main>
 
         <footer>
             <div>
                 <p>
-                    &copy; 2024
+                    <a href="LICENSE">License</a>
                 </p>
             </div>
         </footer>
