--- a/template.html
+++ b/template.html
@@ -36,7 +36,7 @@
         <footer>
             <div>
                 <p>
-                    <a href="LICENSE">License</a>
+                    <a href="license.html">License</a>
                 </p>
             </div>
         </footer>
