--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div>
                 <h2 class="heading">Welcome</h2>
                 <p>
-                    Are you ready to put your coding skills to the test in this epic battle of wits? Do you have what it takes to take down the evil Nano Corps? Find out here by putting your know-how to the ultimate test and learning new things along the way!
+                    Are you ready to put your coding skills to the test in this epic battle of wits? Do you have what it takes to take down the evil Nano Corps and become the best agent? Find out here by putting your know-how to the ultimate test and learning new things along the way!
                 </p>
             </div>
         </main>
